Fix upcoming episode guide spacing once and for all. ONCE AND FOR ALL! ONCE AND FOR ALL!!!!!ONE

--- a/src/Ds2013/Presenters/Domain/BroadcastEvent/_broadcast-event.scss
+++ b/src/Ds2013/Presenters/Domain/BroadcastEvent/_broadcast-event.scss
@@ -17,3 +17,7 @@
 .broadcast-event__date {
     display: block;
 }
+
+.broadcast-event .programme__service {
+    word-wrap: break-word;
+}
